--- a/Web%20Program/StyleSheet.css
+++ b/Web%20Program/StyleSheet.css
@@ -2,6 +2,18 @@
 	position: relative;
 }
 
+#home {
+	margin: auto;
+	width: 100%;	
+	
+}
+
+p {
+	font-family: Verdana;
+	font-size: 20px;
+	text-align: center;
+}
+
 body {
 	background-color: white;
 }
@@ -41,36 +53,51 @@ input {
 .product {
 	background-color: white;
 	font-family: Verdana;
-	
 }
 
 
 #header {
-	width: 75%;
-	height: 5%;
 	background-color: #E5E4E2;
 	margin: auto;
 	border-radius: 10px;
 	margin-bottom: 5px;
+ 	background-image: url('2017picture.jpg');
 }
 
 #main {
 	background-color: #E5E4E2;
-	width: 100%;
+	width: 75%;
 	height: 1000px;
 	margin: auto;
 	border-radius: 10px;
 }
 
-table, td {
-	border: 2px solid black;
+table {
+	
 	font-size: 100%;
 	font-family: Verdana;
-	
 	text-align: center;
 	margin: auto;
-	border-radius: 10px;
 	background-color: white;
+	overflow: auto;
+}
+
+td {
+	border: 2px solid black;
+	border-radius: 10px;
+	width: 12%;
+}
+
+
+
+
+
+
+
+
+.reflow{
+   width: 100%;
+   table-layout: fixed;
 }
 
 span {
@@ -88,6 +115,7 @@ span {
 ul {
 	list-style-type: none;
 	text-align: center;
+	
 }
 
 li {
